--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .DS_Store
 .ipynb_checkpoints
-arvato_data
+arvato_data/.DS_Store
+arvato_data/Udacity_AZDIAS_052018.csv
+arvato_data/Udacity_CUSTOMERS_052018.csv
